# pybrightness

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  release_notes.rst
pybrightness/: __init__.py  controller.py  module.py
